refactor: some stuff regarding builds and stuff so that they don't longer take like 3 min every time :3 add: the load func in FFmpegLoader now uses the javacv lib and doesn't spawn a new proces :3 add: the load func in FFmpegLoader now can do Video :3 add: the renderer now also can do an Arraylist of BufferedImage :3 add: the fps stuf kinda works it just ignores the IO time :3